# Shopfypage

./: .gitignore  README.md  publish_product.bat  pyproject.toml
src/agentes_crew_automation_para_vendas_no_shopify/: crew.py  main.py
src/agentes_crew_automation_para_vendas_no_shopify/config/: agents.yaml  competitor_config.yaml  product_page.yaml  tasks.yaml
src/agentes_crew_automation_para_vendas_no_shopify/tools/: shopify_publisher.py
