[project]
name = "agentes_crew_automation_para_vendas_no_shopify"
version = "0.1.0"
description = "agentes_crew_automation_para_vendas_no_shopify using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
agentes_crew_automation_para_vendas_no_shopify = "agentes_crew_automation_para_vendas_no_shopify.main:run"
run_crew = "agentes_crew_automation_para_vendas_no_shopify.main:run"
train = "agentes_crew_automation_para_vendas_no_shopify.main:train"
replay = "agentes_crew_automation_para_vendas_no_shopify.main:replay"
test = "agentes_crew_automation_para_vendas_no_shopify.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
